Set sumbu to 3,3,3-5,5,5 in RotasiSembarang.ipynb

--- a/RotasiSembarang.ipynb
+++ b/RotasiSembarang.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "933b21a5",
    "metadata": {},
    "outputs": [],
@@ -13,46 +13,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "6cf683af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main(list_point, sudut):\n",
+    "def main(list_point):\n",
     "    \"\"\"\n",
     "    PROGRAM UTAMA\n",
-    "    Fungsi untuk menampilkan pemutaran balok\n",
+    "    Fungsi untuk menampilkan rotasi balok\n",
     "    \n",
     "    Args: \n",
-    "        list_point (list) : List titik sudut bangun ruang\n",
+    "        list_point (list) : List titik sudut dari bangun ruang\n",
     "        sudut (int) : Seberapa besar bangun ruang tersebut akan diputar (satuan: derajat)\n",
     "        \n",
     "    Returns:\n",
     "        None\n",
     "    \"\"\"\n",
-    "    win = GraphWin('Awal', 200,200)\n",
-    "    win.setCoords(-3,-3,3,3)\n",
     "    \n",
-    "#     sumbu = Line(Point(-3,-3),Point(3,3))\n",
-    "#     sumbu.draw(win)\n",
+    "    # Setup window\n",
+    "    win = GraphWin('Rotasi terhadap sembarang sumbu', 600,600)\n",
+    "    win.setCoords(-6,-6,6,6)\n",
+    "    \n",
+    "    # Menulis judul dan Menggambar sumbu putar\n",
+    "    title = Text(Point(0, 5.2), 'Memutar balok terhadap garis 3,3,3 - 5,5,5')\n",
+    "    title.draw(win)\n",
+    "    \n",
+    "    sumbu = Line(Point(3,3),Point(5,5))\n",
+    "    sumbu.setFill('red')\n",
+    "    sumbu.draw(win)\n",
+    "    \n",
+    "    sumbuExtend = Line(Point(-4.5,-4.5),Point(3,3))\n",
+    "    sumbuExtend.setFill('pink')\n",
+    "    sumbuExtend.draw(win)\n",
+    "    \n",
+    "    teksPangkal = Text(Point(3.2,2.7), '3,3,3')\n",
+    "    teksUjung = Text(Point(5.2,5.2), '5,5,5')\n",
+    "    teksPangkal.draw(win)\n",
+    "    teksUjung.draw(win)\n",
+    "    \n",
+    "    \n",
+    "    # Meminta input besar sudut yang akan dirotasi\n",
+    "    entriSudut = Entry(Point(0,-5.2), 5)\n",
+    "    teks = Text(Point(0, -4.8), 'Masukkan sudut putar, lalu klik di manapun pada window')\n",
+    "    entriSudut.draw(win)\n",
+    "    teks.draw(win)\n",
+    "    \n",
+    "    # Menerima input sudut rotasi\n",
+    "    win.getMouse()  # Program perlu suatu trigger agar program mengambil input dari kolom entri, getMouse berperan sbg trigger\n",
+    "    sudut = int(entriSudut.getText())\n",
+    "    entriSudut.undraw()\n",
+    "    teks.undraw()\n",
+    "    subtitle = Text(Point(0,-5.2), f'Sudut putar : {sudut}°')\n",
+    "    subtitle.draw(win)\n",
     "        \n",
+    "    # Merotasi balok\n",
     "    for iterr in range(sudut):\n",
     "        isFinished = True if (iterr==sudut-1) else False        \n",
     "        draw(win, list_point, isFinished)\n",
-    "        list_point = Rotate(list_point)\n",
+    "        list_point = rotate(list_point)\n",
     "    \n",
+    "    # Program selesai\n",
     "    win.getMouse()\n",
     "    win.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "9292221f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw(windows, list_point, finished):\n",
+    "def draw(window, list_point, finished=False):\n",
     "    \"\"\"\n",
     "    Fungsi untuk Menggambar titik sudut dan garis kerangka balok\n",
     "    \n",
@@ -65,32 +98,46 @@
     "        None\n",
     "    \"\"\"\n",
     "    \n",
-    "    points = []\n",
-    "    lines = []\n",
-    "    for i, koor_point in enumerate(list_point):\n",
-    "        point_temp = Point(koor_point[1],koor_point[2])\n",
-    "        points.append(point_temp)\n",
-    "        points[i].draw(windows)\n",
+    "    points = []  # list penampung semua objek Point\n",
+    "    lines = []  # list penampung semua objek Line\n",
     "    \n",
-    "    # Menggambar titik sudut kubus\n",
-    "    for j in range(0,5,4):\n",
+    "    # Menggambar titik sudut balok\n",
+    "    for i, koor_point in enumerate(list_point):\n",
+    "        point_temp = Point(koor_point[1],koor_point[2])  \n",
+    "        # Hanya mengambil koordinat y dan z dari koor_point\n",
+    "        # Hal ini karena layar desktop dispan oleh sumbu y dan z, sedangkan sumbu x ⟂ layar\n",
+    "        points.append(point_temp)\n",
+    "        points[i].draw(window)\n",
+    "    \n",
+    "    # Menggambar garis kerangka balok untuk sisi atas (A-B-C-D) dan bawah (E-F-G-H)\n",
+    "    bidangAtasLaluBawah = [0,4]\n",
+    "    for j in bidangAtasLaluBawah:\n",
     "        for k in range(j, 4+j):\n",
     "            line_temp = None\n",
     "            if (k+1) != 4+j:\n",
+    "            # Garis (AB, BC, CD, dan EF, FG, GH)\n",
     "                line_temp = Line(points[k], points[k+1])\n",
+    "                # print(f'point {k}:', k,',', k+1) --> troubleshooting, uncomment untuk melihat indeks line\n",
     "            else:\n",
+    "            # Garis (DA dan HE)\n",
     "                line_temp = Line(points[k], points[k-3])\n",
+    "                # print(f'point {k}:', k, ',', k-3) --> troubleshooting, uncomment untuk melihat indeks line\n",
     "            lines.append(line_temp)\n",
     "            \n",
-    "            lines[k].draw(windows)\n",
+    "            lines[k].draw(window)\n",
     "            \n",
+    "    # Menggambar garis kerangka balok untuk sisi samping: (A-E), (B-F), (C-G), (D-H)\n",
     "    for l in range(4):\n",
+    "        # print(f'point {8+l}:', l,',',l+4) --> troubleshooting, uncomment untuk melihat indeks line\n",
     "        line_temp = Line(points[l],points[l+4])\n",
     "        lines.append(line_temp)\n",
-    "        lines[8+l].draw(windows)\n",
+    "        lines[8+l].draw(window)\n",
     "    \n",
-    "    time.sleep(.07)\n",
+    "    # Jeda\n",
+    "    time.sleep(.03)\n",
     "    \n",
+    "    # Untuk iterasi terakhir, gambar dibiarkan tetap di window\n",
+    "    # Jika bukan iter terakhir, gambar segera di-undraw\n",
     "    if not finished:\n",
     "        for point in points:\n",
     "            point.undraw()\n",
@@ -100,15 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "7fc2cf64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Rotate(list_point):\n",
+    "def rotate(list_point):\n",
     "    \"\"\"\n",
-    "    Fungsi untuk merotasi titik\n",
+    "    Fungsi untuk merotasi titik sebesar sudut tertentu thd sumbu 3,3,3 - 5,5,5 (mirip PR kemarin)\n",
     "    \n",
+    "    Rumus:\n",
+    "        Invers T x R(β) x R(-μ) x Rotasi x R(μ) x R(-β) x T\n",
     "    Args:\n",
     "        list_point (list) : list titik yang akan dirotasi\n",
     "    \n",
@@ -117,32 +166,34 @@
     "    \"\"\"\n",
     "    list_point_transpos = np.array(list_point).T\n",
     "    \n",
-    "    # Rotasi 45 derajat thd sumbu 3,3,3 - 5,5,5 (sesuai PR kemarin)\n",
-    "    # Rumus: \n",
     "    # cos dan sin (-45)\n",
     "    cos_45 = np.cos(np.radians(-45))\n",
     "    sin_45 = np.sin(np.radians(-45))\n",
     "\n",
-    "    # miu (sbg argumen matriks R(miu)), \n",
+    "    # miu (sbg argumen matriks R(μ)), \n",
     "    miu_rad = np.arctan(1/np.sqrt(2))\n",
     "    miu = np.degrees(miu_rad)\n",
-    "\n",
+    "    \n",
+    "    # cos dan sin (45)\n",
     "    cos45 = np.cos(np.radians(45))\n",
     "    sin45 = np.sin(np.radians(45))\n",
     "\n",
     "    # Matriks translasi 3,3,3-5,5,5 ke origin\n",
+    "    # T\n",
     "    T = np.array([[1,0,0,-3],\n",
     "                  [0,1,0,-3],\n",
     "                  [0,0,1,-3],\n",
     "                  [0,0,0,1]])\n",
     "\n",
     "    # matriks untuk merotasi sumbu putar (3,3,3-5,5,5) sebesar -45 derajat ke bidang yz\n",
+    "    # R(-β)\n",
     "    R_45 = np.array([[cos_45, 0, sin_45, 0],\n",
     "                  [0,      1, 0,      0],\n",
     "                  [-sin_45,0, cos_45, 0],\n",
     "                  [0,      0, 0,      1]])\n",
     "    \n",
     "    # Matriks utk merotasi sumbu putar ke sumbu z\n",
+    "    # R(μ)\n",
     "    Rmiu = np.array([[1,0,0,0],\n",
     "                     [0,np.cos(miu_rad), -np.sin(miu_rad), 0],\n",
     "                     [0,np.sin(miu_rad), np.cos(miu_rad), 0],\n",
@@ -155,12 +206,14 @@
     "                       [0,                     0,                     0,1]])\n",
     "    \n",
     "    # Inverse Rmiu\n",
+    "    # R(-μ)\n",
     "    R_miu = np.array([[1,0,0,0],\n",
     "                     [0,np.cos(-miu_rad), -np.sin(-miu_rad), 0],\n",
     "                     [0,np.sin(-miu_rad), np.cos(-miu_rad), 0],\n",
     "                     [0,0,0,1]])\n",
     "    \n",
     "    # Inverse R_45\n",
+    "    # R(β)\n",
     "    R45 = np.array([[cos45, 0, sin45, 0],\n",
     "                  [0,      1, 0,      0],\n",
     "                  [-sin45,0, cos45, 0],\n",
@@ -170,6 +223,7 @@
     "    T_1 = np.linalg.inv(T)\n",
     "\n",
     "    # Matriks rotasi keseluruhan\n",
+    "    \n",
     "    M = T_1 @ R45 @R_miu @ Rotasi @Rmiu @ R_45 @ T\n",
     "    \n",
     "    return (M @ list_point_transpos).T"
@@ -177,32 +231,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "0a33725c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setup koordinat balok\n",
-    "A = np.array([1,-1,1,1])\n",
-    "B = np.array([1,1,1,1])\n",
-    "C = np.array([-1,1,1,1])\n",
-    "D = np.array([-1,-1,1,1])\n",
-    "E = np.array([1,-1,-1,1])\n",
-    "F = np.array([1,1,-1,1])\n",
-    "G = np.array([-1,1,-1,1])\n",
-    "H = np.array([-1,-1,-1,1])\n",
+    "A = np.array([1,-2,1,1])\n",
+    "B = np.array([1,2,1,1])\n",
+    "C = np.array([-1,2,1,1])\n",
+    "D = np.array([-1,-2,1,1])\n",
+    "E = np.array([1,-2,-1,1])\n",
+    "F = np.array([1,2,-1,1])\n",
+    "G = np.array([-1,2,-1,1])\n",
+    "H = np.array([-1,-2,-1,1])\n",
     "\n",
     "# Matriks seluruh koordinat balok\n",
     "points_awal = [A,B,C,D,E,F,G,H]\n",
     "\n",
     "# Run program\n",
-    "main(points_awal, sudut=360)"
+    "main(points_awal)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7767bc2e",
+   "id": "46059b65",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4546001c",
    "metadata": {},
    "outputs": [],
    "source": []
