Menggambar balok sejak awal pada .ipynb

--- a/RotasiSembarang.ipynb
+++ b/RotasiSembarang.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "933b21a5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "6cf683af",
    "metadata": {},
    "outputs": [],
@@ -35,10 +35,14 @@
     "    win = GraphWin('Rotasi terhadap sembarang sumbu', 600,600)\n",
     "    win.setCoords(-6,-6,6,6)\n",
     "    \n",
-    "    # Menulis judul dan Menggambar sumbu putar\n",
+    "    # Menulis judul\n",
     "    title = Text(Point(0, 5.2), 'Memutar balok terhadap garis 3,3,3 - 5,5,5')\n",
     "    title.draw(win)\n",
     "    \n",
+    "    # Menggambar posisi awal balok\n",
+    "    corners, skeletons = draw(win, list_point, keep=True)\n",
+    "    \n",
+    "    # Menggambar sumbu putar\n",
     "    sumbu = Line(Point(3,3),Point(5,5))\n",
     "    sumbu.setFill('red')\n",
     "    sumbu.draw(win)\n",
@@ -52,7 +56,6 @@
     "    teksPangkal.draw(win)\n",
     "    teksUjung.draw(win)\n",
     "    \n",
-    "    \n",
     "    # Meminta input besar sudut yang akan dirotasi\n",
     "    entriSudut = Entry(Point(0,-5.2), 5)\n",
     "    teks = Text(Point(0, -4.8), 'Masukkan sudut putar, lalu klik di manapun pada window')\n",
@@ -64,8 +67,14 @@
     "    sudut = int(entriSudut.getText())\n",
     "    entriSudut.undraw()\n",
     "    teks.undraw()\n",
+    "    \n",
+    "    # Menuliskan subtitle 'Sudut putar: '\n",
     "    subtitle = Text(Point(0,-5.2), f'Sudut putar : {sudut}°')\n",
     "    subtitle.draw(win)\n",
+    "    \n",
+    "    # Menghapus posisi awal balok\n",
+    "    for corner in corners: corner.undraw()\n",
+    "    for skeleton in skeletons: skeleton.undraw()\n",
     "        \n",
     "    # Merotasi balok\n",
     "    for iterr in range(sudut):\n",
@@ -80,22 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "9292221f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw(window, list_point, finished=False):\n",
+    "def draw(window, list_point, keep=False):\n",
     "    \"\"\"\n",
     "    Fungsi untuk Menggambar titik sudut dan garis kerangka balok\n",
     "    \n",
     "    Args: \n",
     "        windows (graphics.GraphWin): window dimana objek akan digambar\n",
     "        list_point (list) : list titik sudut yang akan digambar\n",
-    "        finished (bool) : flag apakah iterasi ini adalah iterasi terakhir\n",
+    "        finished (bool) : flag penentu apakah bangun yang telah digambar ingin disimpan atau tidak\n",
     "        \n",
     "    Returns:\n",
-    "        None\n",
+    "        points (list of Point) : list dari Point yang telah digambar\n",
+    "        lines (list of Line) : list dari Line yang telah digambar\n",
     "    \"\"\"\n",
     "    \n",
     "    points = []  # list penampung semua objek Point\n",
@@ -138,16 +148,18 @@
     "    \n",
     "    # Untuk iterasi terakhir, gambar dibiarkan tetap di window\n",
     "    # Jika bukan iter terakhir, gambar segera di-undraw\n",
-    "    if not finished:\n",
+    "    if not keep:\n",
     "        for point in points:\n",
     "            point.undraw()\n",
     "        for line in lines:\n",
-    "            line.undraw()"
+    "            line.undraw()\n",
+    "            \n",
+    "    return points, lines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "7fc2cf64",
    "metadata": {},
    "outputs": [],
@@ -223,7 +235,7 @@
     "    T_1 = np.linalg.inv(T)\n",
     "\n",
     "    # Matriks rotasi keseluruhan\n",
-    "    \n",
+    "    # Rumus: Invers T x R(β) x R(-μ) x Rotasi x R(μ) x R(-β) x T\n",
     "    M = T_1 @ R45 @R_miu @ Rotasi @Rmiu @ R_45 @ T\n",
     "    \n",
     "    return (M @ list_point_transpos).T"
@@ -231,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "0a33725c",
    "metadata": {},
    "outputs": [],
@@ -256,15 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46059b65",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4546001c",
+   "id": "4770975a",
    "metadata": {},
    "outputs": [],
    "source": []
