Fix typo docstring

--- a/RotasiSembarang.ipynb
+++ b/RotasiSembarang.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "933b21a5",
+   "execution_count": 7,
+   "id": "4b23f223",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "6cf683af",
    "metadata": {},
    "outputs": [],
@@ -24,8 +24,7 @@
     "    Fungsi untuk menampilkan rotasi balok\n",
     "    \n",
     "    Args: \n",
-    "        list_point (list) : List titik sudut dari bangun ruang\n",
-    "        sudut (int) : Seberapa besar bangun ruang tersebut akan diputar (satuan: derajat)\n",
+    "        list_point (list atau np.array) : List titik sudut dari bangun ruang\n",
     "        \n",
     "    Returns:\n",
     "        None\n",
@@ -59,6 +58,7 @@
     "    # Meminta input besar sudut yang akan dirotasi\n",
     "    entriSudut = Entry(Point(0,-5.2), 5)\n",
     "    teks = Text(Point(0, -4.8), 'Masukkan sudut putar, lalu klik di manapun pada window')\n",
+    "    entriSudut.setFill('white')\n",
     "    entriSudut.draw(win)\n",
     "    teks.draw(win)\n",
     "    \n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "9292221f",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
     "    Args: \n",
     "        windows (graphics.GraphWin): window dimana objek akan digambar\n",
     "        list_point (list) : list titik sudut yang akan digambar\n",
-    "        finished (bool) : flag penentu apakah bangun yang telah digambar ingin disimpan atau tidak\n",
+    "        keep (bool) : flag penentu apakah bangun yang telah digambar ingin disimpan atau tidak\n",
     "        \n",
     "    Returns:\n",
     "        points (list of Point) : list dari Point yang telah digambar\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "7fc2cf64",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "0a33725c",
    "metadata": {},
    "outputs": [],
@@ -259,8 +259,16 @@
     "H = np.array([-1,-2,-1,1])\n",
     "\n",
     "# Matriks seluruh koordinat balok\n",
-    "points_awal = [A,B,C,D,E,F,G,H]\n",
-    "\n",
+    "points_awal = [A,B,C,D,E,F,G,H]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4770975a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Run program\n",
     "main(points_awal)"
    ]
@@ -268,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4770975a",
+   "id": "5b16366b",
    "metadata": {},
    "outputs": [],
    "source": []
